server status link

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -14,4 +14,6 @@
       p *this is a live updated list
       p 
         a(href='/crash/players') all players ever
+      p 
+        a(href='/status', target='_blank') server status
 
