boundstar now links back

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -15,5 +15,5 @@
       p 
         a(href='/crash/players') all players ever
       p 
-        a(href='/status', target='_blank') server status
+        a(href='/status') server status
 
