--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -13,7 +13,7 @@
         li(class=title=='Boundstar'?'active':undefined)
           a(href='/') Home
         li(class=title)
-          a(href='http://forum.boundstar.com') Forum
+          a(href='http://forum.boundstar.com', target='_blank') Forum
         li(class=title=='Player Manager'?'active':undefined)
           a(href='/players') Players
         //- li.dropdown(class=title=='Worlds'?'active':undefined)
