rank in main navigation replaces home

--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -10,8 +10,10 @@
         img(src='/assets/img/logo.png')
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=title=='Boundstar'?'active':undefined)
+        //- li(class=title=='Boundstar'?'active':undefined)
           a(href='/') Home
+        li(class=title=='Rank'?'active':undefined)
+          a(href='/rank') Rank
         li(class=title)
           a(href='http://forum.boundstar.com', target='_blank') Forum
         li(class=title=='Player Manager'?'active':undefined)
