fade out background with site is working on a new page, hide worlds

--- a/views/rank.jade
+++ b/views/rank.jade
@@ -115,7 +115,7 @@ block content
                           input(type='hidden', name='_csrf', value=token)
                           button.btn.btn-primary(type='submit') Upgrade to Explorer
 
-    if user.profile.rank != 'Recruit'
+    //- if user.profile.rank != 'Recruit'
       .clearfix
       .col-md-12
         .page-header
