--- a/views/default.html.jade
+++ b/views/default.html.jade
@@ -15,6 +15,9 @@ if document
       script.
         $(function($){
           $.backstretch("/assets/img/bg.png", {speed: 1000});
+          window.onbeforeunload = function() {
+            $('.backstretch').fadeOut(1000);
+          }
         });
       //-   - var scripts = getBlock('scripts')
       //-   - var styles = getBlock('styles')
