--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,9 @@ html(lang="en")
     script.
       $(function($){
         $.backstretch("/assets/img/bg.png", {speed: 1000});
+        window.onbeforeunload = function() {
+          $('.backstretch').fadeOut(1000);
+        }
       });
   body
     include default.html.jade
