--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -22,13 +22,8 @@ block content
       .col-sm-4
         input.form-control(type='Rank', name='Rank', id='Rank', value='#{user.profile.rank}', disabled)
     .form-group
-      label.col-sm-3.control-label(for='player') Starbound Name
-      if user.profile.rank === 'Recruit'
-        span(style='line-height: 36px') whatever you use to 
-          a(href='http://starbound-servers.net/server/313/vote/') vote
-          |  with
-      else
-        i.fa.fa-lock(style='font-size:24px;margin-top: 8px')
+      label.col-sm-3.control-label(for='player') Voting Name
+      i.fa.fa-lock(style='font-size:24px;margin-top: 8px')
       .col-sm-4
         if user.profile.rank === 'Recruit'
           input.form-control(type='player', name='player', id='player', value='#{user.profile.player}')
