Updating the supporters list
also took the star off explorer rank

--- a/views/home.jade
+++ b/views/home.jade
@@ -109,13 +109,14 @@ block content
       p Thanks to all of our supporters
         ul
           li Munlock
+          li Fanservice
           li many more
       .page-header
         h3 Ranks
       ol
         li Recruit
         li Player
-        li Explorer*
+        li Explorer
         li Member*
         li Builder*
         li Modder*
