--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -18,4 +18,4 @@ block content
             | Login
           a.btn.btn-link(href='/forgot') Forgot your password?
       p or 
-        a.btn.btn-success(href='/signin') Sign Up
+        a.btn.btn-success(href='/register') Register
