--- a/views/account/register.jade
+++ b/views/account/register.jade
@@ -29,7 +29,7 @@ block content
       .col-sm-offset-3.col-sm-7
         button.btn.btn-success(type='submit')
           i.fa.fa-check
-          | Signup
+          | Register
     .col-sm-offset-3.col-sm-7
       p We don't spam
   script.
