--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -7,6 +7,8 @@
       br
       br
       script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
+      p Thanks 
+        a(href='/voters') voters!
       h3.online
         span#numOnline
         |  Players Online
