--- a/views/rank.jade
+++ b/views/rank.jade
@@ -108,7 +108,7 @@ block content
     if !forum_stats
       .col-md-12
         h4 You should 
-          a(href='') register on the forums.
+          a(href='http://forum.boundstar.com/register') register on the forums.
     - var voted = false
     if votes
       each vote, i in votes
